--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ google-auth-oauthlib
 pydantic==2.11.7
 openpyxl
 setuptools<81
+fastapi~=0.116.1
 websockets==15.0.1
 httpx==0.28.1
 python-multipart==0.0.20
